k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerable-app
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vulnerable-app
  template:
    metadata:
      labels:
        app: vulnerable-app
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
      - name: vulnerable-app
        image: vulnerable-app:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
          allowPrivilegeEscalation: true
          capabilities:
            add: ["ALL"]
        ports:
        - containerPort: 5000
          name: http
        - containerPort: 9090
          name: debug
        volumeMounts:
        - name: host-volume
          mountPath: /host
      volumes:
      - name: host-volume
        hostPath:
          path: /
          type: Directory
